app-deploy/frontend/overlays/dev/ingress-dev-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: "anishbista60.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-frontend-service
            port:
              number: 80
