app-deploy/frontend/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - todo.anishbista.xyz
    - todoback.anishbista.xyz
    secretName: app-tls-cert
  rules:
  - host: "todo.anishbista.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: "todoback.anishbista.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
